--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "homepage": "https://Ashish-1521.github.io/Portfolio",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build --mode production",
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build",
